Dark mode color adjustments, fixes

--- a/www/comps/admin/admin.css
+++ b/www/comps/admin/admin.css
@@ -359,7 +359,7 @@
 .admin-repo .repo-module .part{
 	display:flex;
 	flex-flow:column nowrap;
-	background-color:var(--color-input);
+	background-color:var(--color-bright);
 }
 .admin-repo .repo-module .bad-state{
 	color:var(--color-error);
@@ -537,7 +537,7 @@
 	flex-flow:column nowrap;
 	border:1px solid var(--color-border);
 	border-radius:5px;
-	background-color:var(--color-bg);
+	background-color:var(--color-bright);
 	position:relative;
 }
 .admin-cluster-node img.server{
