--- a/www/comps/app.css
+++ b/www/comps/app.css
@@ -75,7 +75,7 @@
 	/* colors */
 	--color-bg:            #f7f7f7;
 	--color-bg-bright:     #fcfcfc;
-	--color-bright:        #f5f5f5;
+	--color-bright:        #ffffff;
 	--color-border:        #9b9b9b;
 	--color-border-bright: #9f9f9f;
 	--color-border-dark:   #2f2f2f;
@@ -86,7 +86,7 @@
 	--color-font-dark:     #101010;
 	--color-font-disabled: #797979;
 	--color-input:         #ffffff;
-	--color-input-dark:    #444444;
+	--color-input-dark:    #3b3b3b;
 	--color-input-disabled:#efefef;
 	--color-list-row-even: #e9eeef;
 	--color-shade:         #333333;
@@ -481,6 +481,7 @@ h3{
 .contentBox .content .contentPart{
 	flex:1 1 500px;
 	max-width:550px;
+	min-width:450px;
 	margin:calc(var(--spacing) / 2.5);
 	padding:12px;
 	display:flex;
@@ -494,6 +495,7 @@ h3{
 .contentBox .content .contentPart.short{
 	flex:1 1 300px;
 	max-width:450px;
+	min-width:380px;
 }
 .contentBox .content .contentPart.long{
 	flex:1 1 800px;
@@ -812,7 +814,7 @@ table td.maximum{
 	background-color:var(--color-bg);
 }
 .generic-table.bright>tbody>tr>td{
-	background-color:var(--color-input);
+	background-color:var(--color-bright);
 }
 .generic-table>thead>tr>th:first-child,
 .generic-table>tbody>tr>td:first-child{
@@ -1379,7 +1381,7 @@ table td.maximum{
 .user-dark,
 .user-dark *{
 	/* color overwites */
-	--color-bg:            #2d2d2d;
+	--color-bg:            #252525;
 	--color-bg-bright:     #363636;
 	--color-bright:        #323232;
 	--color-border:        #111111;
@@ -1389,23 +1391,23 @@ table td.maximum{
 	--color-font:          #ededed;
 	--color-input:         var(--color-input-dark);
 	--color-input-disabled:#222222;
-	--color-list-row-even: #525455;
+	--color-list-row-even: #3a4141;
 	--color-shade:         #000000;
 	--color-shade-bright:  #222222;
 	--color-shade-input:   #080808;
 	--color-shade-input-sel:hsl(311,57%,20%);
 	
-	--color-accent1:       hsl(311,47%,70%);
+	--color-accent1:       hsl(316, 7%, 40%);
 	--color-accent2:       hsl(128, 4%,30%);
 	--color-accent3:       hsl(199,11%,35%);
 	--color-accent3-alt:   hsl(199,11%,45%);
 	--color-accent4:       hsl(339, 4%,61%);
-	--color-action:        hsl(196,27%,30%);
-	--color-action-bright: hsl(196,22%,60%);
-	--color-action-disable:hsl(0,   0%,28%);
-	--color-cancel:        hsl(0,  57%,32%);
-	--color-error:         hsl(0,  64%,49%);
-	--color-success:       hsl(113,54%,32%);
+	--color-action:        hsl(195, 27%, 26%);
+	--color-action-bright: hsl(196, 14%, 47%);
+	--color-action-disable:hsl(0, 0%, 21%);
+	--color-cancel:        hsl(0, 42%, 27%);
+	--color-error:         hsl(0, 73%, 36%);
+	--color-success:       hsl(113, 53%, 27%);
 	
 	--color-hover-underlay:           rgba(0,0,0,0.50);
 	--color-form-builder-actions:     hsl(195,17%,29%,1.00);
