--- a/www/comps/widgets.css
+++ b/www/comps/widgets.css
@@ -143,7 +143,7 @@
 	flex:0 0 auto;
 	display:flex;
 	flex-flow:column nowrap;
-	background-color:var(--color-input);
+	background-color:var(--color-bright);
 	border-radius:6px;
 	box-shadow:1px 1px 4px var(--color-shade);
 	overflow:hidden;
